# neural-network-from-scratch

./: .gitignore  main.py  network.py  neuron.py  playground.ipynb  pyproject.toml  requirements.txt  test_neural_network_layer.py
nn/: __init__.py  activations.py
nn/graph/: neuron.py
nn/jax/: initializers.py  model.py
nn/utils/: __init__.py  activations.py  component.py  losses.py  optimizers.py
nn/vectorized/: __init__.py  dense.py  network.py
