[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural_network_from_scratch"
version = "0.0.1"
description = "Neural Network Implementation From Scratch"
readme = "README.md"
authors = [{ name = "berkaytrhn", email = "berkaytrhn@gmail.com" }]
license = "MIT"
keywords = ["machine learning", "deep learning", "scratch implementation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "python==^3.11.8",
  "asttokens==2.4.1",
  "colorama==0.4.6",
  "comm==0.2.2",
  "debugpy==1.8.3",
  "decorator==5.1.1",
  "executing==2.0.1",
  "ipykernel==6.29.5",
  "ipython==8.26.0",
  "jedi==0.19.1",
  "jupyter_client==8.6.2",
  "jupyter_core==5.7.2",
  "matplotlib-inline==0.1.7",
  "nest-asyncio==1.6.0",
  "numpy==2.0.1",
  "packaging==24.1",
  "parso==0.8.4",
  "platformdirs==4.2.2",
  "prompt_toolkit==3.0.47",
  "psutil==6.0.0",
  "pure_eval==0.2.3",
  "Pygments==2.18.0",
  "python-dateutil==2.9.0.post0",
  "pywin32==306",
  "pyzmq==26.0.3",
  "six==1.16.0",
  "stack-data==0.6.3",
  "tornado==6.4.1",
  "traitlets==5.14.3",
  "typing_extensions==4.12.2",
  "wcwidth==0.2.13",
  "ml_from_scratch==0.0.1" # https://github.com/berkaytrhn/ml-from-scratch
]


[project.urls]
"Source" = "https://github.com/berkaytrhn/neural-network-from-scratch"
